fixed randomization b/w speaker/listener and layout issues

--- a/experiments/3dObjects/chatbox_basic/index.css
+++ b/experiments/3dObjects/chatbox_basic/index.css
@@ -184,7 +184,7 @@ ALOT...don't understand how to adjust that.*/
 }
 
 #message_panel {
-	height: 40vh;
+	height: 50vh;
 	width: 100vh;
  
 	float: top;
@@ -198,7 +198,7 @@ ALOT...don't understand how to adjust that.*/
 #messages {
 	height:85%;
 	text-align: left;
-	font-size: 200%;
+	font-size: 100%;
 	overflow-y: scroll;
 }
 
@@ -211,7 +211,7 @@ ALOT...don't understand how to adjust that.*/
 #chatarea input {
 	border: 0; 
 	height: 99%;
-	font-size: 125%;
+	font-size: 100%;
 	width: 89%; 
 	margin-left: .5%;
 	margin-right: .5%;
@@ -224,7 +224,7 @@ ALOT...don't understand how to adjust that.*/
 #chatarea button {
 	width: 9%; 
 	height: 5vh;
-	font-size: 150%;
+	font-size: 100%;
 	background: rgb(130, 224, 255); 
 	border: none; 
 	padding: 5px;
